--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,7 +31,7 @@ jobs:
       fail-fast: false
       matrix:
         test: ${{ fromJSON(needs.prepare.outputs.tests) }}
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - name: Checkout
         uses: actions/checkout@v4
